add partials html

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,11 +1,45 @@
-<footer class="page__footer">
-  <small>
-    &copy; Todos los derechos reservados
-    <include
-      src="./link.html"
-      aClass="link__adalab"
-      text="Adalab"
-      url="https://adalab.es"
-    ></include>
-  </small>
+<footer class="footer">
+  <div class="footer__item">
+    <h3 class="title3">Tienda</h3>
+    <nav class="nav_items">
+      <ul class="text2-light link">
+        <li><a href="https://adalab.es">Productos</a></li>
+        <li><a href="https://adalab.es">Cajoneras</a></li>
+        <li><a href="https://adalab.es">Para toda la casa</a></li>
+        <li><a href="https://adalab.es">Habitaciones</a></li>
+      </ul>
+    </nav>
+  </div>
+
+  <div class="footer__item">
+    <h3 class="title3">Nosotros</h3>
+    <nav class="nav_items">
+      <ul class="text2-light link">
+        <li><a href="https://adalab.es">Nuestra Guía</a></li>
+        <li><a href="https://adalab.es">Nuestro diseño</a></li>
+        <li><a href="https://adalab.es">Nuestra historia</a></li>
+        <li><a href="https://adalab.es">Ayuda</a></li>
+      </ul>
+    </nav>
+  </div>
+
+  <div class="footer__item">
+    <h3 class="title3">Contacto</h3>
+    <div class="text2-light link">
+      <p>ayuda@openspaces.com</p>
+      <a href="https://adalab.es">Socios</a>
+    </div>
+
+    <div class="footer_social">
+      <a href="https://www.linkedin.com/school/adalab/" target="_blank"
+        ><i class="fa-brands fa-linkedin-in"></i
+      ></a>
+      <a href="https://www.instagram.com/adalab_digital/" target="_blank"
+        ><i class="fa-brands fa-instagram"></i
+      ></a>
+      <a href="https://twitter.com/Adalab_Digital" target="_blank"
+        ><i class="fa-brands fa-twitter"></i
+      ></a>
+    </div>
+  </div>
 </footer>
