--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,4 +1,16 @@
-<header class="page__header">
-  <img src="./assets/images/logo-adalab.png" alt="Adalab">
-  <h1>@@title</h1>
+<header class="header">
+  <a class="link-bars" href="https://adalab.es">
+    <i class="fa-solid fa-bars"></i>
+  </a>
+
+  <nav class="menu">
+    <ul>
+      <li>productos</li>
+      <li>colecciones</li>
+      <li>tienda</li>
+      <li>inicio</li>
+    </ul>
+  </nav>
+
+  <img src="./assets/images/logo.png" alt="Logo Open Spaces" />
 </header>
