--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,40 +1,73 @@
-<main class="page__main">
-  <h2>Este es el starter kit de Adalab</h2>
-  <p>Lo usamos para aprender:</p>
-  <ul class="main__list">
-    <li>Sass</li>
-    <li>HTML partials</li>
-    <li>Gulp</li>
-    <li>y muchas cosas más</li>
-  </ul>
-  <p>Si quieres saber cúales son las rutas correctas para:</p>
-  <ul class="main__list">
-    <li>
-      una <code class="code">&lt;img /&gt;</code> mira el fichero
-      <code class="code">./src/html/partials/header.html</code>.
-    </li>
-    <li>
-      y para un <code class="code">background-image</code> mira el fichero
-      <code class="code">./src/html/scss/layout/_page.scss</code>.
-    </li>
-  </ul>
-  <p>
-    Si quieres saber cómo usar un partial HTML dentro de otro partial, busca en la carperta
-    <code class="code">./src/html/index.html</code> y
-    <code class="code">./src/html/partials/main.html</code>, y verás cómo estamos creando estos
-    enlaces:
-  </p>
-  <ul class="main__list">
-    <li>
-      <include
-        src="./link.html"
-        aClass="link__adalab"
-        text="Adalab"
-        url="https://adalab.es"
-      ></include>
-    </li>
-    <li>
-      <include src="./link.html" text="Más info del starter kit" url="./more-info.html"></include>
-    </li>
-  </ul>
+<main class="main">
+  <section class="m-hero">
+    <img src="./assets/images/header.jpg" alt="Foto creando espacios" />
+    <div>
+      <hi class="title">Disfruta creando espacios</hi>
+      <button class="btn__b">
+        <a class="link" href="https://adalab.es"> comprar ahora</a>
+      </button>
+    </div>
+  </section>
+  <section class="section1">
+    <h2 class="title2">
+      Volverse organizado se siente mejor con
+      <span class="capital">open spaces</span>
+    </h2>
+    <div class="items">
+      <div class="item">
+        <img src="./assets/images/icon_1.png" alt="Icono Lo que necesitas" />
+        <h3 class="title3">Lo que necesitas</h3>
+        <p class="text1">
+          Una linea de productos diseñados para todos tus espacios
+        </p>
+      </div>
+      <div class="item">
+        <img
+          src="./assets/images/icon_2.png"
+          alt="Icono Materia primas sustentables"
+        />
+        <h3 class="title3">Materia primas sustentables</h3>
+        <p class="text1">
+          Todos los productos con materias primas sustentables
+        </p>
+      </div>
+      <div class="item">
+        <img src="./assets/images/icon_3.png" alt="Icono Guía" />
+        <h3 class="title3">Guía</h3>
+        <p class="text1">
+          Soporte y asesoramiento para ayudarte con tu objetivo
+        </p>
+      </div>
+    </div>
+  </section>
+  <section class="section2">
+    <div class="shipping">
+      <img
+        src="./assets/images/icon_4.png"
+        alt="Icono Envío gratis garantizado"
+      />
+      <h3 class="title2">Envío gratis garantizado</h3>
+      <p class="text2">Soporte y asesoramiento para ayudarte con tu objetivo</p>
+      <button class="btn__b--light--un">
+        <a class="link" href="https://adalab.es"> comprar ahora</a>
+      </button>
+    </div>
+  </section>
+  <section class="section3">
+    <div class="claim">
+      <h3 class="title2">Disfruta creando espacios</h3>
+      <p class="text2">
+        Una línea de productos diseñados para todos los espacios
+      </p>
+      <button class="btn__b">
+        <a class="link" href="https://adalab.es"> comprar ahora</a>
+      </button>
+    </div>
+    <div class="container-img">
+      <img
+        src="./assets/images/creando-espacios.jpg"
+        alt="Icono Envío gratis garantizado"
+      />
+    </div>
+  </section>
 </main>
