--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -26,8 +26,9 @@
   <div class="footer__item">
     <h3 class="title3">Contacto</h3>
     <div class="text2-light link">
-      <p>ayuda@openspaces.com</p>
-      <a href="https://adalab.es">Socios</a>
+      <a href="mailto:ayuda@openspaces.com">ayuda@openspaces.com</a>
+
+      <a href="https://adalab.es" target="_blank">Socios</a>
     </div>
 
     <div class="footer_social">
@@ -40,6 +41,9 @@
       <a href="https://twitter.com/Adalab_Digital" target="_blank"
         ><i class="fa-brands fa-twitter"></i
       ></a>
+    </div>
+    <div class="arrow">
+      <a href="#top-page"> <i class="fa-solid fa-arrow-up"></i></a>
     </div>
   </div>
 </footer>
