--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,9 +1,10 @@
 <header class="header">
+  <a name="top-page"></a>
   <a class="link-bars" href="https://adalab.es">
     <i class="fa-solid fa-bars"></i>
   </a>
 
-  <nav class="menu">
+  <nav class="header_menu">
     <ul>
       <li>productos</li>
       <li>colecciones</li>
