--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,6 +1,14 @@
-// fonts
-$font-main: 'Roboto', sans-serif;
+// typeface
+//  l:light
+//  m:medium
+//  d:dark
 
-// colors
-$color-bg: #f3f4f5;
-$color-secondary: #999;
+$color-bg-l: #f0ebe5;
+$color-bg-m: #ff975a;
+$color-bg-d: #0c474b;
+
+$color-text-l: #ffffff;
+$color-text-m: #b6c8c9;
+$color-text-d: #0c474b;
+
+$font-text: "Poppins", sans-serif;
