--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,16 @@
-// @import 'core/variables';
-// @import 'core/reset';
+@import "core/variables";
+@import "core/mixins";
+@import "core/reset";
+
+
 // @import 'components/code';
 // @import 'components/links';
-// @import 'layout/page';
-// @import 'layout/header';
-// @import 'layout/footer';
-// @import 'pages/index';
+
+
+@import 'layout/header';
+@import 'layout/main';
+@import 'layout/footer';
+
+:root {
+  font-family: $font-text;
+}
