--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,17 +1,21 @@
-<header class="header">
+<header>
   <a name="top-page"></a>
-  <a class="link-bars" href="https://adalab.es">
-    <i class="fa-solid fa-bars"></i>
-  </a>
-
-  <nav class="header_menu">
-    <ul>
-      <li>productos</li>
-      <li>colecciones</li>
-      <li>tienda</li>
-      <li>inicio</li>
-    </ul>
-  </nav>
-
-  <img src="./assets/images/logo.png" alt="Logo Open Spaces" />
+  <div class="header">
+    <a class="link" href="https://adalab.es">
+      <i class="fa-solid fa-bars"></i>
+    </a>
+    <!-- <nav class="header_menu">
+      <ul class="header_menu">
+        <li>productos</li>
+        <li>colecciones</li>
+        <li>tienda</li>
+        <li>inicio</li>
+      </ul>
+    </nav> -->
+    <img
+      class="header__logo"
+      src="./assets/images/logo.png"
+      alt="Logo Open Spaces"
+    />
+  </div>
 </header>
