--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -3,12 +3,22 @@
 //  m:medium
 //  d:dark
 
-$color-bg-l: #f0ebe5;
-$color-bg-m: #ff975a;
-$color-bg-d: #0c474b;
+$c-bg-l: #f0ebe5;
+$c-bg-m: #ff975a;
+$c-bg-d: #0c474b;
 
-$color-text-l: #ffffff;
-$color-text-m: #b6c8c9;
-$color-text-d: #0c474b;
+$c-text-l: #ffffff;
+$c-text-m: #b6c8c9;
+$c-text-d: #0c474b;
 
-$font-text: "Poppins", sans-serif;
+$f-text: "Poppins", sans-serif;
+
+$f-size-1: 36px;
+$f-size-2: 30px;
+$f-size-3: 24px;
+$f-size-4: 20px;
+$f-size-5: 16px;
+$f-size-6: 14px;
+
+$f-weight-1: normal;
+$f-weight-2: 600;
