--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,11 +1,9 @@
 <main class="main">
-  <section class="m-hero">
+  <section class="main__hero">
     <img src="./assets/images/header.jpg" alt="Foto creando espacios" />
     <div>
-      <hi class="title">Disfruta creando espacios</hi>
-      <button class="btn__b">
-        <a class="link" href="https://adalab.es"> comprar ahora</a>
-      </button>
+      <hi class="main__hero--title">Disfruta creando espacios</hi>
+      <a class="btn" href="https://adalab.es"> comprar ahora</a>
     </div>
   </section>
   <section class="section1">
