--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,15 +2,13 @@
 @import "core/mixins";
 @import "core/reset";
 
-
 // @import 'components/code';
 // @import 'components/links';
 
-
-@import 'layout/header';
-@import 'layout/main';
-@import 'layout/footer';
+@import "layout/header";
+@import "layout/main";
+@import "layout/footer";
 
 :root {
-  font-family: $font-text;
+  font-family: $f-text;
 }
