--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,9 +1,8 @@
 <main class="main">
-  <section class="main__hero">
-    <img src="./assets/images/header.jpg" alt="Foto creando espacios" />
-    <div>
-      <hi class="main__hero--title">Disfruta creando espacios</hi>
-      <a class="btn" href="https://adalab.es"> comprar ahora</a>
+  <section class="hero">
+    <div class="hero__content">
+      <hi class="hero__title">Disfruta creando espacios</hi>
+      <a class="hero__btn" href="https://adalab.es"> comprar ahora</a>
     </div>
   </section>
   <section class="section1">
