--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -2,6 +2,7 @@
   font-style: normal;
   line-height: normal;
   letter-spacing: normal;
+  text-align: center;
   font-size: $font-size;
   color: $color;
   font-weight: $font-weight;
