--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -1,27 +1,39 @@
 .main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
+  .hero {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+  }
 
-.main__hero {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  transform: translateY(-174px);
-}
+  .hero::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("../../assets/images/header.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+  }
 
-.main__hero--title {
-  @include text($f-size-1, $c-text-d, $f-weight-2);
-}
+  .hero__content {
+    position: relative;
+  }
 
-.btn {
-  background-color: $c-bg-d;
-  width: 176px;
-  height: 48px;
-  gap: 10px;
-  padding: 12px 24px;
-  text-decoration: none;
-  @include text($f-size-5, $c-text-l, $f-weight-2);
-  text-transform: capitalize;
+  .hero__title {
+    @include text($f-size-3, $c-text-d, $f-weight-2);
+  }
+
+  .hero__btn {
+    width: 176px;
+    height: 48px;
+    background-color: $c-bg-d;
+    // gap: 10px;
+    padding: 12px 24px;
+    text-decoration: none;
+    @include text($f-size-5, $c-text-l, $f-weight-2);
+    text-transform: capitalize;
+  }
 }
