add scss main and footer

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,49 +1,81 @@
 <footer class="footer">
-  <div class="footer__item">
-    <h3 class="title3">Tienda</h3>
-    <nav class="nav_items">
-      <ul class="text2-light link">
-        <li><a href="https://adalab.es">Productos</a></li>
-        <li><a href="https://adalab.es">Cajoneras</a></li>
-        <li><a href="https://adalab.es">Para toda la casa</a></li>
-        <li><a href="https://adalab.es">Habitaciones</a></li>
+  <div class="footer__items">
+    <h3 class="footer__title">Tienda</h3>
+    <nav>
+      <ul class="footer__menu">
+        <li>
+          <a class="footer__text" href="https://adalab.es" target="_blank"
+            >Productos</a
+          >
+        </li>
+        <li>
+          <a class="footer__text" href="https://adalab.es" target="_blank"
+            >Cajoneras</a
+          >
+        </li>
+        <li>
+          <a class="footer__text" href="https://adalab.es" target="_blank"
+            >Para toda la casa</a
+          >
+        </li>
+        <li>
+          <a class="footer__text" href="https://adalab.es" target="_blank"
+            >Habitaciones</a
+          >
+        </li>
       </ul>
     </nav>
   </div>
 
-  <div class="footer__item">
-    <h3 class="title3">Nosotros</h3>
-    <nav class="nav_items">
-      <ul class="text2-light link">
-        <li><a href="https://adalab.es">Nuestra Guía</a></li>
-        <li><a href="https://adalab.es">Nuestro diseño</a></li>
-        <li><a href="https://adalab.es">Nuestra historia</a></li>
-        <li><a href="https://adalab.es">Ayuda</a></li>
+  <div class="footer__items">
+    <h3 class="footer__title">Nosotros</h3>
+    <nav>
+      <ul class="footer__menu">
+        <li>
+          <a class="footer__text" href="https://adalab.es" target="_blank"
+            >Nuestra Guía</a
+          >
+        </li>
+        <li>
+          <a class="footer__text" href="https://adalab.es " target="_blank"
+            >Nuestro diseño</a
+          >
+        </li>
+        <li>
+          <a class="footer__text" href="https://adalab.es" target="_blank"
+            >Nuestra historia</a
+          >
+        </li>
+        <li>
+          <a class="footer__text" href="https://adalab.es" target="_blank"
+            >Ayuda</a
+          >
+        </li>
       </ul>
     </nav>
   </div>
 
-  <div class="footer__item">
-    <h3 class="title3">Contacto</h3>
-    <div class="text2-light link">
-      <a href="mailto:ayuda@openspaces.com">ayuda@openspaces.com</a>
+  <div class="footer__items">
+    <h3 class="footer__title">Contacto</h3>
+    <a class="footer__text" href="mailto:ayuda@openspaces.com"
+      >ayuda@openspaces.com</a
+    >
 
-      <a href="https://adalab.es" target="_blank">Socios</a>
-    </div>
+    <a class="footer__text" href="https://adalab.es" target="_blank">Socios</a>
 
     <div class="footer_social">
       <a href="https://www.linkedin.com/school/adalab/" target="_blank"
-        ><i class="fa-brands fa-linkedin-in"></i
+        ><i class="fa-brands fa-linkedin-in icons"></i
       ></a>
       <a href="https://www.instagram.com/adalab_digital/" target="_blank"
-        ><i class="fa-brands fa-instagram"></i
+        ><i class="fa-brands fa-instagram icons"></i
       ></a>
       <a href="https://twitter.com/Adalab_Digital" target="_blank"
-        ><i class="fa-brands fa-twitter"></i
+        ><i class="fa-brands fa-twitter icons"></i
       ></a>
     </div>
-    <div class="arrow">
-      <a href="#top-page"> <i class="fa-solid fa-arrow-up"></i></a>
-    </div>
+  </div>
+  <div class="arrow">
+    <a href="#top-page"> <i class="fa-solid fa-arrow-up icons"></i></a>
   </div>
 </footer>
