--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,21 +1,26 @@
 <header>
   <a name="top-page"></a>
-  <div class="header">
-    <a class="link" href="https://adalab.es">
-      <i class="fa-solid fa-bars"></i>
-    </a>
-    <!-- <nav class="header_menu">
-      <ul class="header_menu">
-        <li>productos</li>
-        <li>colecciones</li>
-        <li>tienda</li>
-        <li>inicio</li>
-      </ul>
-    </nav> -->
-    <img
-      class="header__logo"
-      src="./assets/images/logo.png"
-      alt="Logo Open Spaces"
-    />
+  <div class="container_header">
+    <div class="header__menu">
+      <a class="menu-h" href="https://adalab.es">
+        <i class="fa-solid fa-bars menu"></i>
+      </a>
+      <!-- <nav class="header_menu">
+        <ul class="header_menu">
+          <li>productos</li>
+          <li>colecciones</li>
+          <li>tienda</li>
+          <li>inicio</li>
+        </ul>
+      </nav> -->
+    </div>
+    <div class="header__logo">
+      <img class="logo" src="./assets/images/logo.png" alt="Logo Open Space" />
+    </div>
+  </div>
+
+  <div class="hero__content">
+    <hi class="hero__title">Disfruta creando espacios</hi>
+    <a class="hero__btn" href="https://adalab.es"> comprar ahora</a>
   </div>
 </header>
