--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,9 @@
 
 @import "layout/header";
 @import "layout/main";
+@import "layout/main-s1-benefits.scss";
+@import "layout/main-s2-send.scss";
+@import "layout/main-s3-shop.scss";
 @import "layout/footer";
 
 :root {
