--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,70 +1,31 @@
 <main class="main">
-  <section class="hero">
-    <div class="hero__content">
-      <hi class="hero__title">Disfruta creando espacios</hi>
-      <a class="hero__btn" href="https://adalab.es"> comprar ahora</a>
-    </div>
-  </section>
-  <section class="section1">
-    <h2 class="title2">
+  <section class="s1-benefits">
+    <h2 class="benefits__title">
       Volverse organizado se siente mejor con
       <span class="capital">open spaces</span>
     </h2>
-    <div class="items">
-      <div class="item">
-        <img src="./assets/images/icon_1.png" alt="Icono Lo que necesitas" />
-        <h3 class="title3">Lo que necesitas</h3>
-        <p class="text1">
-          Una linea de productos diseñados para todos tus espacios
-        </p>
-      </div>
-      <div class="item">
-        <img
-          src="./assets/images/icon_2.png"
-          alt="Icono Materia primas sustentables"
-        />
-        <h3 class="title3">Materia primas sustentables</h3>
-        <p class="text1">
-          Todos los productos con materias primas sustentables
-        </p>
-      </div>
-      <div class="item">
-        <img src="./assets/images/icon_3.png" alt="Icono Guía" />
-        <h3 class="title3">Guía</h3>
-        <p class="text1">
-          Soporte y asesoramiento para ayudarte con tu objetivo
-        </p>
-      </div>
-    </div>
+
+    <include
+      src="./main-s1-benefits.html"
+      benefit_icon="./assets/images/icon_1.png"
+      benefit_name="Lo que necesitas"
+      benefit_description="Una linea de productos diseñados para todos tus espacios"
+    ></include>
+
+    <include
+      src="./main-s1-benefits.html"
+      benefit_icon="./assets/images/icon_2.png"
+      benefit_name="Materia primas sustentables"
+      benefit_description="Todos los productos con materias primas sustentables"
+    ></include>
+
+    <include
+      src="./main-s1-benefits.html"
+      benefit_icon="./assets/images/icon_3.png"
+      benefit_name="Guía"
+      benefit_description="Soporte y asesoramiento para ayudarte con tu objetivo"
+    ></include>
   </section>
-  <section class="section2">
-    <div class="shipping">
-      <img
-        src="./assets/images/icon_4.png"
-        alt="Icono Envío gratis garantizado"
-      />
-      <h3 class="title2">Envío gratis garantizado</h3>
-      <p class="text2">Soporte y asesoramiento para ayudarte con tu objetivo</p>
-      <button class="btn__b--light--un">
-        <a class="link" href="https://adalab.es"> comprar ahora</a>
-      </button>
-    </div>
-  </section>
-  <section class="section3">
-    <div class="claim">
-      <h3 class="title2">Disfruta creando espacios</h3>
-      <p class="text2">
-        Una línea de productos diseñados para todos los espacios
-      </p>
-      <button class="btn__b">
-        <a class="link" href="https://adalab.es"> comprar ahora</a>
-      </button>
-    </div>
-    <div class="container-img">
-      <img
-        src="./assets/images/creando-espacios.jpg"
-        alt="Icono Envío gratis garantizado"
-      />
-    </div>
-  </section>
+  <include src="./main-s2-send.html"></include>
+  <include src="./main-s3-shop.html"></include>
 </main>
