--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -1,39 +1,20 @@
 .main {
-  .hero {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-  }
+  width: 100%;
+  background-color: $c-bg-l;
+}
 
-  .hero::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url("../../assets/images/header.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-  }
+.s1-benefits {
+  margin: 0px 45px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 2fr 2fr 2fr;
+  justify-items: center;
+}
 
-  .hero__content {
-    position: relative;
-  }
-
-  .hero__title {
-    @include text($f-size-3, $c-text-d, $f-weight-2);
-  }
-
-  .hero__btn {
-    width: 176px;
-    height: 48px;
-    background-color: $c-bg-d;
-    // gap: 10px;
-    padding: 12px 24px;
-    text-decoration: none;
-    @include text($f-size-5, $c-text-l, $f-weight-2);
-    text-transform: capitalize;
-  }
+.benefits__title {
+  @include text($f-size-3, $c-text-d, $f-weight-2);
+  padding-top: 41px;
+}
+.capital {
+  text-transform: uppercase;
 }
