add header responsive

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -5,14 +5,42 @@
       <a class="menu-h" href="https://adalab.es">
         <i class="fa-solid fa-bars menu"></i>
       </a>
-      <!-- <nav class="header_menu">
-        <ul class="header_menu">
-          <li>productos</li>
-          <li>colecciones</li>
-          <li>tienda</li>
-          <li>inicio</li>
+      <nav class="header__nav">
+        <ul class="header__nav--menu">
+          <li>
+            <a
+              class="header__nav--text"
+              href="https://adalab.es"
+              target="_blank"
+              >productos</a
+            >
+          </li>
+          <li>
+            <a
+              class="header__nav--text"
+              href="https://adalab.es"
+              target="_blank"
+              >colecciones</a
+            >
+          </li>
+          <li>
+            <a
+              class="header__nav--text"
+              href="https://adalab.es"
+              target="_blank"
+              >tienda</a
+            >
+          </li>
+          <li>
+            <a
+              class="header__nav--text"
+              href="https://adalab.es"
+              target="_blank"
+              >inicio</a
+            >
+          </li>
         </ul>
-      </nav> -->
+      </nav>
     </div>
     <div class="header__logo">
       <img class="logo" src="./assets/images/logo.png" alt="Logo Open Space" />
@@ -20,7 +48,9 @@
   </div>
 
   <div class="hero__content">
-    <hi class="hero__title">Disfruta creando espacios</hi>
-    <a class="hero__btn" href="https://adalab.es"> comprar ahora</a>
+    <div class="hero-text">
+      <hi class="hero__title">Disfruta creando espacios</hi>
+      <a class="hero__btn" href="https://adalab.es"> comprar ahora</a>
+    </div>
   </div>
 </header>
