add responsive main-s3

--- a/src/html/partials/main-s3-shop.html
+++ b/src/html/partials/main-s3-shop.html
@@ -2,7 +2,7 @@
   <div class="shop">
     <h3 class="shop__title">Disfruta creando espacios</h3>
     <p class="shop__text">
-      Una línea de productos diseñados para todos los espacios
+      Una línea de productos diseñados para todos tus espacios
     </p>
     <a class="hero__btn" href="https://adalab.es" target="_blank">
       Comprar ahora</a
