add responsive footer

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,81 +1,83 @@
 <footer class="footer">
-  <div class="footer__items">
-    <h3 class="footer__title">Tienda</h3>
-    <nav>
-      <ul class="footer__menu">
-        <li>
-          <a class="footer__text" href="https://adalab.es" target="_blank"
-            >Productos</a
-          >
-        </li>
-        <li>
-          <a class="footer__text" href="https://adalab.es" target="_blank"
-            >Cajoneras</a
-          >
-        </li>
-        <li>
-          <a class="footer__text" href="https://adalab.es" target="_blank"
-            >Para toda la casa</a
-          >
-        </li>
-        <li>
-          <a class="footer__text" href="https://adalab.es" target="_blank"
-            >Habitaciones</a
-          >
-        </li>
-      </ul>
-    </nav>
-  </div>
-
-  <div class="footer__items">
-    <h3 class="footer__title">Nosotros</h3>
-    <nav>
-      <ul class="footer__menu">
-        <li>
-          <a class="footer__text" href="https://adalab.es" target="_blank"
-            >Nuestra Guía</a
-          >
-        </li>
-        <li>
-          <a class="footer__text" href="https://adalab.es " target="_blank"
-            >Nuestro diseño</a
-          >
-        </li>
-        <li>
-          <a class="footer__text" href="https://adalab.es" target="_blank"
-            >Nuestra historia</a
-          >
-        </li>
-        <li>
-          <a class="footer__text" href="https://adalab.es" target="_blank"
-            >Ayuda</a
-          >
-        </li>
-      </ul>
-    </nav>
-  </div>
-
-  <div class="footer__items">
-    <h3 class="footer__title">Contacto</h3>
-    <a class="footer__text" href="mailto:ayuda@openspaces.com"
-      >ayuda@openspaces.com</a
-    >
-
-    <a class="footer__text" href="https://adalab.es" target="_blank">Socios</a>
-
-    <div class="footer_social">
-      <a href="https://www.linkedin.com/school/adalab/" target="_blank"
-        ><i class="fa-brands fa-linkedin-in icons"></i
-      ></a>
-      <a href="https://www.instagram.com/adalab_digital/" target="_blank"
-        ><i class="fa-brands fa-instagram icons"></i
-      ></a>
-      <a href="https://twitter.com/Adalab_Digital" target="_blank"
-        ><i class="fa-brands fa-twitter icons"></i
+  <div class="wrapper">
+    <div class="footer__items">
+      <h3 class="footer__title">Tienda</h3>
+      <nav>
+        <ul class="footer__menu">
+          <li>
+            <a class="footer__text" href="https://adalab.es" target="_blank"
+              >Productos</a
+            >
+          </li>
+          <li>
+            <a class="footer__text" href="https://adalab.es" target="_blank"
+              >Cajoneras</a
+            >
+          </li>
+          <li>
+            <a class="footer__text" href="https://adalab.es" target="_blank"
+              >Para toda la casa</a
+            >
+          </li>
+          <li>
+            <a class="footer__text" href="https://adalab.es" target="_blank"
+              >Habitaciones</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="footer__items">
+      <h3 class="footer__title">Nosotros</h3>
+      <nav>
+        <ul class="footer__menu">
+          <li>
+            <a class="footer__text" href="https://adalab.es" target="_blank"
+              >Nuestra Guía</a
+            >
+          </li>
+          <li>
+            <a class="footer__text" href="https://adalab.es " target="_blank"
+              >Nuestro diseño</a
+            >
+          </li>
+          <li>
+            <a class="footer__text" href="https://adalab.es" target="_blank"
+              >Nuestra historia</a
+            >
+          </li>
+          <li>
+            <a class="footer__text" href="https://adalab.es" target="_blank"
+              >Ayuda</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="footer__items">
+      <h3 class="footer__title">Contacto</h3>
+      <a class="footer__text" href="mailto:ayuda@openspaces.com"
+        >ayuda@openspaces.com</a
+      >
+      <a class="footer__text" href="https://adalab.es" target="_blank"
+        >Socios</a
+      >
+      <div class="footer_social">
+        <a href="https://www.linkedin.com/school/adalab/" target="_blank"
+          ><i class="fa-brands fa-linkedin-in icons"></i
+        ></a>
+        <a href="https://www.instagram.com/adalab_digital/" target="_blank"
+          ><i class="fa-brands fa-instagram icons"></i
+        ></a>
+        <a href="https://twitter.com/Adalab_Digital" target="_blank"
+          ><i class="fa-brands fa-twitter icons"></i
+        ></a>
+      </div>
+    </div>
+    <div class="arrow">
+      <a href="#top-page" title="Ir arriba">
+        <i class="fa-solid fa-arrow-up icons"></i
       ></a>
     </div>
-  </div>
-  <div class="arrow">
-    <a href="#top-page"> <i class="fa-solid fa-arrow-up icons"></i></a>
   </div>
 </footer>
