--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,11 +1,31 @@
 .footer {
   background-color: $c-bg-d;
   height: 100%;
+  padding: 56px 28px 16px 100px;
+
+  @include tablet {
+    padding: 71px 118px 74px;
+  }
+}
+
+.wrapper {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
-  padding: 56px 28px 16px 100px;
+
+  @include tablet {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+    max-width: 1024px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  @include desktop {
+  }
 }
 
 .footer__items {
@@ -42,6 +62,15 @@
 }
 
 .arrow {
-  width: 100%;
-  text-align: right;
+  position: absolute;
+  right: 30px;
+  padding-bottom: 10px;
+
+  @include tablet {
+    right: 57px;
+  }
+
+  @include desktop {
+    right: 187px;
+  }
 }
