modify img shop

--- a/src/html/partials/main-s3-shop.html
+++ b/src/html/partials/main-s3-shop.html
@@ -8,11 +8,5 @@
       Comprar ahora</a
     >
   </div>
-  <div>
-    <img
-      class="shop__img"
-      src="./assets/images/creando-espacios.jpg"
-      alt="Icono Envío gratis garantizado"
-    />
-  </div>
+  <div class="shop__img"></div>
 </section>
