--- a/src/scss/layout/_main-s3-shop.scss
+++ b/src/scss/layout/_main-s3-shop.scss
@@ -47,9 +47,18 @@
 }
 
 .shop__img {
-  width: 100vw;
+  height: 304px;
+  width: 100%;
+  background: url("../../assets/images/creando-espacios.jpg") center center
+    no-repeat;
+  background-size: cover;
+
+  @include tablet {
+    height: 474px;
+  }
 
   @include desktop {
-    width: 100%;
+    height: 571px;
+    width: 50%;
   }
 }
