add transition and animation

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -76,7 +76,7 @@
     </div>
     <div class="arrow">
       <a href="#top-page" title="Ir arriba">
-        <i class="fa-solid fa-arrow-up icons"></i
+        <i class="fa-solid fa-arrow-up icons arrow-jump"></i
       ></a>
     </div>
   </div>
