--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -5,14 +5,6 @@ header {
   background: url("../../assets/images/header.jpg") center center no-repeat;
   background-size: cover;
   position: relative;
-
-  // @include tablet {
-  //   background-position: 50% 0%;
-  // }
-
-  // @include desktop {
-  //   background-position: 50% 50%;
-  // }
 }
 .container_header {
   display: flex;
@@ -105,6 +97,12 @@ i {
   text-decoration: none;
   @include text($f-size-5, $c-text-l, $f-weight-2);
   text-transform: capitalize;
+  transition: background-color ease 0.5s, color ease 0.5s;
+
+  &:hover {
+    background-color: $c-bg-m;
+    color: $c-bg-d;
+  }
 }
 
 .header__nav {
